--- a/source/_posts/2021-04-21-JavaScript工程師養成直播班課程心得-2021六角學院春季.md
+++ b/source/_posts/2021-04-21-JavaScript工程師養成直播班課程心得-2021六角學院春季.md
@@ -1,5 +1,10 @@
 ---
-title: Hello World
+title: JavaScript工程師養成直播班課程心得-2021六角學院春季
+data: 2021-04-24
+tags:
+    -六角學院
+    -前端
+    -JavaScript
 ---
 Welcome to [Hexo](https://hexo.io/)! This is your very first post. Check [documentation](https://hexo.io/docs/) for more info. If you get any problems when using Hexo, you can find the answer in [troubleshooting](https://hexo.io/docs/troubleshooting.html) or you can ask me on [GitHub](https://github.com/hexojs/hexo/issues).
 
