--- a/source/_posts/2021-04-21-JavaScript工程師養成直播班課程心得-2021六角學院春季.md
+++ b/source/_posts/2021-04-21-JavaScript工程師養成直播班課程心得-2021六角學院春季.md
@@ -1,22 +1,16 @@
 ---
 title: JavaScript工程師養成直播班課程心得-2021六角學院春季
-data: 2021-04-24
+date: 2021-04-24
 tags:
     -六角學院
     -前端
     -JavaScript
 ---
-Welcome to [Hexo](https://hexo.io/)! This is your very first post. Check [documentation](https://hexo.io/docs/) for more info. If you get any problems when using Hexo, you can find the answer in [troubleshooting](https://hexo.io/docs/troubleshooting.html) or you can ask me on [GitHub](https://github.com/hexojs/hexo/issues).
+![img](https://i.imgur.com/nnZWsGz.png)
 
-## Quick Start
+### 一、為甚麼會報名這堂課？
 
-### Create a new post
-
-``` bash
-$ hexo new "My New Post"
-```
-
-More info: [Writing](https://hexo.io/docs/writing.html)
+想學會如何寫程式跟如何應用解決問題，也是一直以來想學習的，同時也為自己多項技能，在未來路上有幫助。(之前也有上過Git直播班課程，覺得老師跟助教很強大及課程中會以業界實務去講解)
 
 ### Run server
 
